force-app/main/default/objects/FS_Installation_Reschedule__c/FS_Installation_Reschedule__c.object-meta.xml
<CustomObject>
    <description>This object stores the reschedule information and is created as part of FET 5.0 release..</description>
    <label>Reschedule</label>
    <nameField>
        <displayFormat>RS-{0000000}</displayFormat>
        <label>Reschedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reschedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>