force-app/main/default/objects/FS_Installation_Reschedule__c/fields/FS_Ignore_Brandset_Check__c.field-meta.xml
<CustomField>
    <fullName>FS_Ignore_Brandset_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box will be used in back end to invoke the trigger based on the conditions</description>
    <label>Ignore Brandset Check</label>
    <type>Checkbox</type>
</CustomField>