force-app/main/default/objects/FS_Installation_Reschedule__c/fields/FS_Ignore_brandset_commercial_date__c.field-meta.xml
<CustomField>
    <fullName>FS_Ignore_brandset_commercial_date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore brandset commercial approval date</label>
    <type>Checkbox</type>
</CustomField>