force-app/main/default/objects/FS_Installation_Reschedule__c/fields/FS_Installation__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation__c</fullName>
    <label>Installation Name</label>
    <referenceTo>FS_Installation__c</referenceTo>
    <relationshipLabel>Transaction Reschedule/s</relationshipLabel>
    <relationshipName>Installation_Reschedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>