force-app/main/default/objects/FS_Installation_Reschedule__c/fields/FS_Installation_Id__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation_Id__c</fullName>
    <formula>FS_Installation__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation Id</label>
    <type>Text</type>
</CustomField>