force-app/main/default/objects/FS_Installation_Reschedule__c/fields/FS_Pending_for_Reschedule__c.field-meta.xml
<CustomField>
    <fullName>FS_Pending_for_Reschedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Reschedule</label>
    <type>Checkbox</type>
</CustomField>