force-app/main/default/objects/FS_Installation_Reschedule__c/fields/FS_Reason_for_Reschedule__c.field-meta.xml
<CustomField>
    <fullName>FS_Reason_for_Reschedule__c</fullName>
    <label>Reason for Reschedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party Vendor &quot;&quot;No-Show&quot;&quot;</fullName>
            </value>
            <value>
                <fullName>BK Site-prep/Cabinet Delay</fullName>
            </value>
            <value>
                <fullName>Construction Incomplete</fullName>
            </value>
            <value>
                <fullName>Customer not Ready</fullName>
            </value>
            <value>
                <fullName>Customer Request New Date</fullName>
            </value>
            <value>
                <fullName>Equipment Damaged during transit</fullName>
            </value>
            <value>
                <fullName>Equipment not Received by SP</fullName>
            </value>
            <value>
                <fullName>FPRS Not Available</fullName>
            </value>
            <value>
                <fullName>General Contractor No Show</fullName>
            </value>
            <value>
                <fullName>General Contractor Permit Issue</fullName>
            </value>
            <value>
                <fullName>HFCS not available at Warehouse</fullName>
            </value>
            <value>
                <fullName>HFCS not on-site</fullName>
            </value>
            <value>
                <fullName>Market Activation Date Changed</fullName>
            </value>
            <value>
                <fullName>Natural Disaster</fullName>
            </value>
            <value>
                <fullName>NNS not available at Distributor</fullName>
            </value>
            <value>
                <fullName>NNS not on-site</fullName>
            </value>
            <value>
                <fullName>No Signed Contract</fullName>
            </value>
            <value>
                <fullName>Product Cartridges Not On-Site</fullName>
            </value>
            <value>
                <fullName>Sales/COM Request</fullName>
            </value>
            <value>
                <fullName>Site-Prep Contract not Signed</fullName>
            </value>
            <value>
                <fullName>SP Capacity</fullName>
            </value>
            <value>
                <fullName>SP Did not Inform PM of Time/Date Change</fullName>
            </value>
            <value>
                <fullName>SP has changed</fullName>
            </value>
            <value>
                <fullName>SP No Show</fullName>
            </value>
            <value>
                <fullName>Coordinator error</fullName>
            </value>
            <value>
                <fullName>Platform Change</fullName>
            </value>
            <value>
                <fullName>PIC Error</fullName>
                <isActive>false</isActive>
                <label>PIC Error</label>
            </value>
            <value>
                <fullName>SP Unable to Perform</fullName>
                <isActive>false</isActive>
                <label>SP Unable to Perform</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>