force-app/main/default/objects/FS_Installation_Reschedule__c/fields/FS_Reschedule_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Reschedule_Install_Date__c</fullName>
    <label>Reschedule Date</label>
    <type>Date</type>
</CustomField>