force-app/main/default/objects/FS_Installation_Reschedule__c/fields/FS_Rush_Install_Reason__c.field-meta.xml
<CustomField>
    <fullName>FS_Rush_Install_Reason__c</fullName>
    <label>Rush Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Store Opening</fullName>
            </value>
            <value>
                <fullName>Marketing/Media</fullName>
            </value>
            <value>
                <fullName>Remodel</fullName>
            </value>
            <value>
                <fullName>Legacy Equipment Failure</fullName>
            </value>
            <value>
                <fullName>Customer Request</fullName>
            </value>
            <value>
                <fullName>Rebuild</fullName>
            </value>
            <value>
                <fullName>Health Inspection</fullName>
            </value>
            <value>
                <fullName>PIC Error</fullName>
            </value>
            <value>
                <fullName>NRA</fullName>
            </value>
            <value>
                <fullName>SA Not Uploaded</fullName>
            </value>
            <value>
                <fullName>Customer Unable to Pour Product</fullName>
            </value>
            <value>
                <fullName>Limited Dispenser Accessibility</fullName>
            </value>
            <value>
                <fullName>External Process Failure</fullName>
            </value>
            <value>
                <fullName>Acts of God</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>