force-app/main/default/objects/FS_Installation_Reschedule__c/fields/Install_Outlet__c.field-meta.xml
<CustomField>
    <fullName>Install_Outlet__c</fullName>
    <formula>FS_Installation__r.FS_Outlet__r.Name</formula>
    <label>Install Outlet</label>
    <type>Text</type>
</CustomField>