force-app/main/default/objects/FS_Installation_Reschedule__c/fields/Outlet_Info__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Info__c</fullName>
    <formula>FS_Installation__r.FS_Outlet_Information__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlet Info</label>
    <type>Text</type>
</CustomField>