force-app/main/default/objects/FS_Installation_Reschedule__c/validationRules/Reason_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_is_required</fullName>
    <active>true</active>
    <description>The user should always provide a reason.</description>
    <errorConditionFormula>ISPICKVAL( FS_Reason_for_Reschedule__c , &#39;&#39;)</errorConditionFormula>
    <errorDisplayField>FS_Reason_for_Reschedule__c</errorDisplayField>
    <errorMessage>Reason for Reschedule should be provided to save this record</errorMessage>
</ValidationRule>