force-app/main/default/objects/FS_Installation_Reschedule__c/validationRules/Restrict_Reschedule_When_IP_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Reschedule_When_IP_Complete</fullName>
    <active>true</active>
    <description>Restrict user to create Transaction Reschedule when IP is in &quot;Complete&quot; status..</description>
    <errorConditionFormula>IF(
AND(
OR(
FS_Installation__r.RecordType.Name=$Label.IP_New_Install_Rec_Type,
FS_Installation__r.RecordType.Name=$Label.IP_Relocation_O4W_Rec_Type,
FS_Installation__r.RecordType.Name=$Label.IP_Removal_Rec_Type,
FS_Installation__r.RecordType.Name=$Label.IP_Replacement_Rec_Type
),
FS_Installation__r.Overall_Status2__c =&#39;Complete&#39;),true,false)</errorConditionFormula>
    <errorMessage>You must uncheck any of the following applicable fields in order to create a new Reschedule Date/Pending Reschedule record: &#39;Install Complete&#39; or &#39;Post Install Activity Complete&#39;.</errorMessage>
</ValidationRule>