force-app/main/default/objects/FS_Installation_Reschedule__c/validationRules/Rush_Install_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Rush_Install_Check</fullName>
    <active>true</active>
    <errorConditionFormula>FS_Rush_Install_Check__c</errorConditionFormula>
    <errorDisplayField>FS_Rush_Install_Reason__c</errorDisplayField>
    <errorMessage>This transaction is now considered a Rush. Please select a Rush Reason.</errorMessage>
</ValidationRule>