force-app/main/default/objects/FS_Installation_Reschedule__c/validationRules/SP_Override_checkbox_Reschedule.validationRule-meta.xml
<ValidationRule>
    <fullName>SP_Override_checkbox_Reschedule</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(FS_Installation__r.SP_Override__c=FALSE, ISPICKVAL(FS_Reason_for_Reschedule__c,&#39;SP has changed&#39;)) ,true,false)</errorConditionFormula>
    <errorMessage>Service Provider Name Override checkbox should be checked on the Parent Page layout if Reason for Reschedule is &#39;SP has changed&#39;</errorMessage>
</ValidationRule>